syntax = "proto3";

package systems.daggerheart.v1;

import "common/v1/rng.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/louisbranch/fracturing.space/api/gen/go/systems/daggerheart/v1;daggerheartv1";

// DaggerheartExperience captures a named experience and modifier.
message DaggerheartExperience {
  string name = 1;
  int32 modifier = 2;
}

// DaggerheartProfile contains Daggerheart-specific character profile extensions.
// These are static values configured at character creation.
// Wrapper types allow distinguishing "not provided" from "set to zero" in patches.
message DaggerheartProfile {
  // Character level (1-10).
  // Plain int32: 0 is never valid, so 0 means "not provided" in patches.
  int32 level = 1;
  // Maximum hit points (typically 6 for PCs, 3 for NPCs).
  // Plain int32: 0 is never valid (can't have 0 max HP), so current behavior is correct.
  int32 hp_max = 2;
  // Maximum stress before breakdown (typically 6).
  // Wrapper type allows setting to 0 explicitly (e.g., for NPCs).
  google.protobuf.Int32Value stress_max = 3;
  // Evasion target number for attacks against this character.
  // Wrapper type allows setting to 0 explicitly.
  google.protobuf.Int32Value evasion = 4;
  // Damage threshold for major wounds.
  // Wrapper type allows setting to 0 explicitly.
  google.protobuf.Int32Value major_threshold = 5;
  // Damage threshold for severe wounds.
  // Wrapper type allows setting to 0 explicitly.
  google.protobuf.Int32Value severe_threshold = 6;

  // Damage proficiency for weapons and attacks.
  google.protobuf.Int32Value proficiency = 7;
  // Armor base score.
  google.protobuf.Int32Value armor_score = 8;
  // Maximum armor slots.
  google.protobuf.Int32Value armor_max = 9;

  // Daggerheart traits (range: -2 to +4).
  google.protobuf.Int32Value agility = 10;
  google.protobuf.Int32Value strength = 11;
  google.protobuf.Int32Value finesse = 12;
  google.protobuf.Int32Value instinct = 13;
  google.protobuf.Int32Value presence = 14;
  google.protobuf.Int32Value knowledge = 15;

  // Character experiences.
  repeated DaggerheartExperience experiences = 16;

  // Step 1: selected class content id.
  string class_id = 17;

  // Step 1: selected subclass content id.
  string subclass_id = 18;

  // Step 2: selected ancestry heritage id.
  string ancestry_id = 19;

  // Step 2: selected community heritage id.
  string community_id = 20;

  // Step 3: whether traits were explicitly assigned during creation.
  google.protobuf.BoolValue traits_assigned = 21;

  // Step 6: free-form background text.
  string background = 22;

  // Step 8: selected domain card ids.
  repeated string domain_card_ids = 23;

  // Step 9: free-form character connections text.
  string connections = 24;

  // Step 4: whether additional character details were explicitly recorded.
  google.protobuf.BoolValue details_recorded = 25;

  // Step 5: selected starting weapon ids.
  repeated string starting_weapon_ids = 26;

  // Step 5: selected starting armor id.
  string starting_armor_id = 27;

  // Step 5: selected starting potion item id.
  string starting_potion_item_id = 28;
}

// DaggerheartCreationStepClassSubclassInput applies creation step 1
// (class and subclass selection).
message DaggerheartCreationStepClassSubclassInput {
  string class_id = 1;
  string subclass_id = 2;
}

// DaggerheartCreationStepHeritageInput applies creation step 2
// (ancestry and community selection).
message DaggerheartCreationStepHeritageInput {
  string ancestry_id = 1;
  string community_id = 2;
}

// DaggerheartCreationStepTraitsInput applies creation step 3 (trait assignment).
message DaggerheartCreationStepTraitsInput {
  int32 agility = 1;
  int32 strength = 2;
  int32 finesse = 3;
  int32 instinct = 4;
  int32 presence = 5;
  int32 knowledge = 6;
}

// DaggerheartCreationStepDetailsInput applies creation step 4
// (record additional character details).
message DaggerheartCreationStepDetailsInput {}

// DaggerheartCreationStepEquipmentInput applies creation step 5
// (choose starting equipment).
message DaggerheartCreationStepEquipmentInput {
  repeated string weapon_ids = 1;
  string armor_id = 2;
  string potion_item_id = 3;
}

// DaggerheartCreationStepBackgroundInput applies creation step 6 (background).
message DaggerheartCreationStepBackgroundInput {
  string background = 1;
}

// DaggerheartCreationStepExperiencesInput applies creation step 7 (experiences).
message DaggerheartCreationStepExperiencesInput {
  repeated DaggerheartExperience experiences = 1;
}

// DaggerheartCreationStepDomainCardsInput applies creation step 8 (domain cards).
message DaggerheartCreationStepDomainCardsInput {
  repeated string domain_card_ids = 1;
}

// DaggerheartCreationStepConnectionsInput applies creation step 9 (connections).
message DaggerheartCreationStepConnectionsInput {
  string connections = 1;
}

// DaggerheartCreationStepInput carries exactly one Daggerheart creation step payload.
message DaggerheartCreationStepInput {
  oneof step {
    DaggerheartCreationStepClassSubclassInput class_subclass_input = 1;
    DaggerheartCreationStepHeritageInput heritage_input = 2;
    DaggerheartCreationStepTraitsInput traits_input = 3;
    DaggerheartCreationStepDetailsInput details_input = 4;
    DaggerheartCreationStepEquipmentInput equipment_input = 5;
    DaggerheartCreationStepBackgroundInput background_input = 6;
    DaggerheartCreationStepExperiencesInput experiences_input = 7;
    DaggerheartCreationStepDomainCardsInput domain_cards_input = 8;
    DaggerheartCreationStepConnectionsInput connections_input = 9;
  }
}

// DaggerheartCreationWorkflowInput carries all nine creation step payloads.
// Servers apply these in canonical step order as one atomic workflow update.
message DaggerheartCreationWorkflowInput {
  DaggerheartCreationStepClassSubclassInput class_subclass_input = 1;
  DaggerheartCreationStepHeritageInput heritage_input = 2;
  DaggerheartCreationStepTraitsInput traits_input = 3;
  DaggerheartCreationStepDetailsInput details_input = 4;
  DaggerheartCreationStepEquipmentInput equipment_input = 5;
  DaggerheartCreationStepBackgroundInput background_input = 6;
  DaggerheartCreationStepExperiencesInput experiences_input = 7;
  DaggerheartCreationStepDomainCardsInput domain_cards_input = 8;
  DaggerheartCreationStepConnectionsInput connections_input = 9;
}

// DaggerheartCondition enumerates supported character conditions.
enum DaggerheartCondition {
  DAGGERHEART_CONDITION_UNSPECIFIED = 0;
  DAGGERHEART_CONDITION_HIDDEN = 1;
  DAGGERHEART_CONDITION_RESTRAINED = 2;
  DAGGERHEART_CONDITION_VULNERABLE = 3;
}

// DaggerheartLifeState represents a character's life state.
enum DaggerheartLifeState {
  DAGGERHEART_LIFE_STATE_UNSPECIFIED = 0;
  DAGGERHEART_LIFE_STATE_ALIVE = 1;
  DAGGERHEART_LIFE_STATE_UNCONSCIOUS = 2;
  DAGGERHEART_LIFE_STATE_BLAZE_OF_GLORY = 3;
  DAGGERHEART_LIFE_STATE_DEAD = 4;
}

// DaggerheartDeathMove enumerates supported death move options.
enum DaggerheartDeathMove {
  DAGGERHEART_DEATH_MOVE_UNSPECIFIED = 0;
  DAGGERHEART_DEATH_MOVE_BLAZE_OF_GLORY = 1;
  DAGGERHEART_DEATH_MOVE_AVOID_DEATH = 2;
  DAGGERHEART_DEATH_MOVE_RISK_IT_ALL = 3;
}

// DaggerheartCharacterState contains Daggerheart-specific mutable character state.
// This is materialized as a projection derived from the event journal.
message DaggerheartCharacterState {
  // Current hit points (0 to hp_max from profile).
  int32 hp = 1;
  // Current hope value (0-6).
  int32 hope = 2;
  // Maximum hope slots (reduced by scars).
  int32 hope_max = 3;
  // Current stress value (0 to stress_max from profile).
  int32 stress = 4;
  // Current armor slots (0 to armor_max from profile).
  int32 armor = 5;
  // Active conditions for the character.
  repeated DaggerheartCondition conditions = 6;
  // Current life state.
  DaggerheartLifeState life_state = 7;
  // Active temporary armor buckets.
  repeated DaggerheartTemporaryArmorBucket temporary_armor_buckets = 8;
}

// DaggerheartTemporaryArmorBucket tracks a temporary armor source.
message DaggerheartTemporaryArmorBucket {
  // Source identifier for the temporary armor.
  string source = 1;
  // Duration bucket key that controls clearing rules.
  string duration = 2;
  // Optional stable source id for merge/replace.
  string source_id = 3;
  // Armor amount added by this bucket.
  int32 amount = 4;
}

// DaggerheartSnapshot contains Daggerheart-specific campaign-level state.
// This is materialized as a projection derived from the event journal.
message DaggerheartSnapshot {
  // Current GM Fear value (0-12).
  int32 gm_fear = 1;
  // Count of consecutive short rests.
  int32 consecutive_short_rests = 2;
}

enum DaggerheartRestType {
  DAGGERHEART_REST_TYPE_UNSPECIFIED = 0;
  DAGGERHEART_REST_TYPE_SHORT = 1;
  DAGGERHEART_REST_TYPE_LONG = 2;
}

enum DaggerheartDowntimeMove {
  DAGGERHEART_DOWNTIME_MOVE_UNSPECIFIED = 0;
  DAGGERHEART_DOWNTIME_MOVE_CLEAR_ALL_STRESS = 1;
  DAGGERHEART_DOWNTIME_MOVE_REPAIR_ALL_ARMOR = 2;
  DAGGERHEART_DOWNTIME_MOVE_PREPARE = 3;
  DAGGERHEART_DOWNTIME_MOVE_WORK_ON_PROJECT = 4;
}

enum DaggerheartDamageType {
  DAGGERHEART_DAMAGE_TYPE_UNSPECIFIED = 0;
  DAGGERHEART_DAMAGE_TYPE_PHYSICAL = 1;
  DAGGERHEART_DAMAGE_TYPE_MAGIC = 2;
  DAGGERHEART_DAMAGE_TYPE_MIXED = 3;
}

message DaggerheartDamageRequest {
  int32 amount = 1;
  DaggerheartDamageType damage_type = 2;
  bool resist_physical = 3;
  bool resist_magic = 4;
  bool immune_physical = 5;
  bool immune_magic = 6;
  bool direct = 7;
  bool massive_damage = 8;
  string source = 9;
  repeated string source_character_ids = 10;
}

message DaggerheartRestRequest {
  DaggerheartRestType rest_type = 1;
  bool interrupted = 2;
  int32 party_size = 3;
  common.v1.RngRequest rng = 4;
  string long_term_countdown_id = 5;
}

message DaggerheartDowntimeRequest {
  DaggerheartDowntimeMove move = 1;
  bool prepare_with_group = 2;
}

message DaggerheartLoadoutSwapRequest {
  string card_id = 1;
  int32 recall_cost = 2;
  bool in_rest = 3;
}
